# MCMU

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  UPGRADING.md  pyproject.toml  requirements.txt  v2.0.1.md  v2.1.0.md
.github/: pull_request_template.md
docs/: config.json.md  version.md
src/MCModUpdater/: __main__.py
src/mcm/: __main__.py
src/mcmu/: CLIDefaults.py  Mod.py  ModrinthAPI.py  __init__.py  __main__.py  api.py  cli.py  logging.py  minecraft_mod.py  mods.py  shared.py
src/mcmu/ui/: cli.py
