[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "mcmu"
requires-python = ">=3.13"
authors = [
    {name="Josiah Jarvis"}
]
maintainers = [
    {name="Josiah Jarvis"}
]
description = "Minecraft Mod Updater"
readme = "README.md"
license = "MIT"
keywords = ["Minecraft", "Mods", "Fabric", "Java"]
classifiers = [
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
#    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats",
    "Topic :: File Formats :: JSON",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Logging",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.scripts]
mcmu = "mcmu:__main__.main()"

[project.urls]
Homepage = "https://github.com/Josiah-Jarvis/MCModUpdater"
Documentation = "https://github.com/Josiah-Jarvis/MCModUpdater/blob/master/README.md"
Repository = "https://github.com/Josiah-Jarvis/MCModUpdater/"
Issues = "https://github.com/Josiah-Jarvis/MCModUpdater/issues"
Changelog = "https://github.com/Josiah-Jarvis/MCModUpdater/blob/master/CHANGELOG.md"

[tool.hatch.version]
source = "regex"
path = "src/mcmu/__main__.py"
