[build-system]
requires = ["hatchling >= 1.29"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "mcmu"
requires-python = ">=3.13"
authors = [
    {name="Josiah Jarvis"}
]
maintainers = [
    {name="Josiah Jarvis"}
]
description = "A utility to update Minecraft java edition mods from Modrinth"
readme = "README.md"
license = "MIT"
keywords = ["Minecraft", "Mods", "Fabric", "Java"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
#    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: File Formats",
    "Topic :: File Formats :: JSON",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.scripts]
mcmu = "mcmu:__main__.main()"

[project.urls]
homepage = "https://github.com/Josiah-Jarvis/MCModUpdater"
source = "https://github.com/Josiah-Jarvis/MCModUpdater/"
download = "https://pypi.org/project/mcmu/#files"
changelog = "https://github.com/Josiah-Jarvis/MCModUpdater/blob/master/CHANGELOG.md"
releasenotes = "https://github.com/Josiah-Jarvis/MCModUpdater/compare/1.1.0...1.1.1" # Change before every release
documentation = "https://github.com/Josiah-Jarvis/MCModUpdater/blob/master/README.md"
issues = "https://github.com/Josiah-Jarvis/MCModUpdater/issues"

[tool.hatch.version]
source = "regex"
path = "src/mcmu/__main__.py"
